obk-mtel-document-trunk/k8s/sit/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/group.name: generic-alb
  name: app
spec:
  ingressClassName: alb
  rules:
  - host: document-sit.glorymtel.xyz
    http:
      paths:
      - path: /
        backend:
          service:
            name: app
            port:
              number: 3000
        pathType: Prefix
